# nelson

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
example/: config.toml
src/: backend.rs  client.rs  commands.rs  context.rs  dispatch.rs  domain.rs  errors.rs  main.rs  parser.rs  printer.rs  settings.rs  types.rs  utils.rs
src/backend/: ollama.rs  openai.rs
src/static/: example_config.rs  help.rs  mod.rs  system_prompts.rs
